# annotate_bert_predictions

./: .gitignore  annotation.py  pyproject.toml
src/: annotation.py
src/utils/: util.py
utils/: util.py
