[tool.poetry]
name = "annotate_prediction"
version = "0.1.0"
description = "Annotate the predictions of RTE model."
authors = ["Daigoro Abe"]

[tool.poetry.dependencies]
python = "^3.7.1"
streamlit = "^0.88.0"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
